user-profile: Polishing view pages
Notice
----
User profile page will be more simplified
in the future.

It's easy to slow down, but it's not used very well.

See: Yona Github issue #170

--- a/app/views/user/partial_milestones.scala.html
+++ b/app/views/user/partial_milestones.scala.html
@@ -60,8 +60,5 @@
             </div>
         </div>
     </div>
-    <div class="completion-rate"><!--
-             -->@milestone.getCompletionRate<!--
-             --><i>%</i>
-    </div>
+    <div class="completion-rate">@milestone.getCompletionRate %</div>
 </li>
