markdown: Set code block to wrap words

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -13,6 +13,11 @@
   src: url(https://cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebLight.eot?#iefix) format('embedded-opentype'), local('※'), url(https://cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebLight.woff) format('woff')
 }
 
+code {
+  white-space: inherit;
+  word-break: break-all;
+}
+
 .markdown-wrap {
   font-size: 1.15em;
   clear: both;
