login: Simplify login input form

--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -369,3 +369,10 @@ li.select2-result-with-children:first-of-type {
     display: block;
     margin: 10px 0;
 }
+
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 100px #fcfcfc inset;
+    &:focus {
+        -webkit-box-shadow: 0 0 0 100px #fcfcfc inset;
+    }
+}
