--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1415,12 +1415,18 @@
         font-weight: bold;
         margin-bottom: 10px;
         &:focus {
-            border: 1px solid @orange;
+            border-bottom: 1px solid @orange;
             outline: none;
         }
         &.password {
             margin-bottom: 15px;
         }
+        border-radius: 0 !important;
+    }
+
+    input {
+        border: none;
+        border-bottom: 1px solid #ccc;
     }
 
     .alert h4 { font-size:15px; }
