issue: Change checked issue list style

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3486,8 +3486,7 @@ label.issue-item-row {
     clear: both;
 
     &.active {
-        background-color:#F0F0F0;
-        border-left: 8px solid #E6E4E4;
+        background-color:#F5F5F5 !important;
     }
 
     .mass-update-check {
