--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -231,7 +231,7 @@
                         <dl>
                             @if(project.menuSetting.issue) {
                                 <dd class="project-btn-item">
-                                    <a href="@routes.IssueApp.newIssueForm(project.owner, project.name)?parentIssueId=@parentIssueId" class="ybtn ybtn-success" target="_blank">@Messages("button.newIssue")</a>
+                                    <a href="@routes.IssueApp.newIssueForm(project.owner, project.name)?parentIssueId=@parentIssueId" class="ybtn ybtn-success">@Messages("button.newIssue")</a>
                                 </dd>
                             }
                             <dt>@Messages("issue.assignee")</dt>
