navbar: Show the number of user open issues
See: Yona Github issue #178

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -547,6 +547,16 @@
     .border-radius(9px);
 }
 
+.counter-badge {
+    display: inline-block;
+    font-size: 12px;
+    padding: 0 3px;
+    text-align: center;
+    font-family: @fixed-font-family;
+    .border-radius(3px);
+    vertical-align: middle;
+}
+
 .project-new-posting {
     font-size: 12px;
     line-height: 14px;
