--- a/app/views/common/usermenu.scala.html
+++ b/app/views/common/usermenu.scala.html
@@ -28,7 +28,7 @@
 @myOpenIssueCount = @{
     val count = Issue.countOpenIssuesByUser(UserApp.currentUser())
     if(count > 0) {
-        Html("<span class=\"counter-badge\">(" + count + ")</span>")
+        Html("<span class=\"counter-badge\">" + count + "</span>")
     }
 }
 
