code: Change style of meta info area at code view

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -4458,12 +4458,11 @@ label.issue-item-row {
     .file-header {
         margin-top: 10px;
         line-height: 34px;
-        background-color: #eee;
-        border-bottom:1px solid #ccc;
+        background-color: #f9f9f9;
+        border: 1px solid #ccc;
         font-size: 11px;
-        padding-left: 15px;
-        padding-right: 15px;
         overflow: hidden;
+        padding: 3px 15px 5px 15px;
 
         .file-info {
             float: left;
