--- a/app/views/common/usermenu.scala.html
+++ b/app/views/common/usermenu.scala.html
@@ -85,7 +85,7 @@
         <li class="gnb-usermenu-dropdown" id="sidebar-open-btn">
             <a href="javascript:void(0);" class="gnb-dropdown-toggle">
                 <span class="avatar-wrap smaller">
-                    <img src="@UserApp.currentUser().avatarUrl" />
+                    <img src="@UserApp.currentUser().avatarUrl(32)" />
                 </span>
                 <span class="caret-text">@UserApp.currentUser().name</span>
                 <span class="caret"></span>
