--- a/app/views/issue/partial_massupdate.scala.html
+++ b/app/views/issue/partial_massupdate.scala.html
@@ -1,24 +1,12 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2013 NAVER Corp.
-* http://yobi.io
-*
-* @author Suwon Chae
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
-@(project:Project, param:models.support.SearchCondition)
+@import models.support.SearchCondition
+@import utils.TemplateHelper._
+@(project:Project, param:SearchCondition)
 
 @labelList(project:Project) = {
     @IssueLabel.findByProject(project).groupBy(_.category).map {
@@ -85,7 +73,7 @@
                     <li data-value="@user.id">
                         <a class="usf-group">
                             <span class="avatar-wrap smaller">
-                                <img src="@user.avatarUrl" width="20" height="20">
+                                <img src="@user.avatarUrl(32)" width="20" height="20">
                             </span>
                             <strong class="name">@user.name</strong>
                             <span class="loginid"> <strong>@{"@"}</strong>@user.loginId</span>
