--- a/app/views/user/edit.scala.html
+++ b/app/views/user/edit.scala.html
@@ -59,7 +59,7 @@
 
           <div class="avatar-frm">
             <div class="avatar-wrap xlarge">
-              <img src="@user.avatarUrl" style="width:128px; max-width:none;" />
+              <img src="@user.avatarUrl(256)" style="width:128px; max-width:none;" />
             </div>
             <div class="upload-progress avatar" style="display:none;"><div class="bar orange"></div></div>
             <div class="btn-wrap mt10 center-txt">
