--- a/app/views/user/edit_emails.scala.html
+++ b/app/views/user/edit_emails.scala.html
@@ -49,7 +49,7 @@
     <table class="table mt20">
       <tr>
         <td>
-          <img src="@getAvatar(user.email, 40)" width="40" height="40">
+          <img src="@user.avatarUrl(80)" width="40" height="40">
           <strong class="ml10">@user.email</strong>
           <span class="label-head vmiddle ml10">@Messages("emails.main.email")</span>
         </td>
