--- a/app/views/user/view.scala.html
+++ b/app/views/user/view.scala.html
@@ -36,7 +36,7 @@
     <div class="page-wrap">
         <section class="user-box">
             <div class="user-info-box">
-                <div class="whoami-wrap" style="background-image:url('@user.avatarUrl')"></div>
+                <div class="whoami-wrap" style="background-image:url('@user.avatarUrl(256)')"></div>
                 <div class="whoami usf-group">
                     <span class="name">@user.name</span>
                     <span class="loginid">@{"@"}@user.loginId</span>
