--- a/app/views/issue/partial_list.scala.html
+++ b/app/views/issue/partial_list.scala.html
@@ -28,11 +28,7 @@
             }
             <label for="issue-@issue.id" class="issue-item-row">
                 <a href="@routes.UserApp.userInfo(user.loginId)" class="avatar-wrap mlarge hide-in-mobile" data-toggle="tooltip" data-placement="top" title="@user.loginId">
-                    @if(user.avatarUrl == UserApp.DEFAULT_AVATAR_URL){
-                        <img src="@urlToPicture(user.email, 32)">
-                    } else {
-                        <img src="@user.avatarUrl" alt="@user.name" width="32" height="32"/>
-                    }
+                        <img src="@User.findByLoginId(issue.authorLoginId).avatarUrl(64)" alt="@user.name" width="32" height="32"/>
                 </a>
                 <div class="title-wrap">
                     <a href="@routes.IssueApp.issue(project.owner, project.name, issue.getNumber)" class="title">
