issue: Fix 'to list' button's wrong link at some case
When a user see closed issue, 'to list' button's link isn't proper.
This commit fix that problem.

See: Yona Github issue #192

--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -22,7 +22,7 @@
 
 @urlToIssues = @{
   requestHeader.headers.get("Referer") match {
-    case Some(u) => urlToList(u, routes.IssueApp.issues(project.owner, project.name, "open").toString())
+    case Some(u) => urlToList(u, routes.IssueApp.issues(project.owner, project.name, issue.state.state()).toString())
     case _ => routes.IssueApp.issues(project.owner, project.name, "open").toString()
   }
 }
