issue: Make short issue link preview text length

--- a/app/views/common/scripts.scala.html
+++ b/app/views/common/scripts.scala.html
@@ -98,7 +98,7 @@
         });
 
         // ajax for issue link detail(ui.IssuePreview)
-        $(document).on("mouseenter", ".issueLink", function(){
+        $(document).on("mouseover", ".issueLink", function(){
             var welTarget = $(this);
 
             welTarget.tooltip({
