code: Make issue number autolink in commit message body

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3084,6 +3084,9 @@ label.inline-list {
 }
 
 .commitMsg {
+    a {
+        color: @blue2;
+    }
     &.short {
         padding:5px;
         font-size:14px;
@@ -4219,6 +4222,9 @@ label.issue-item-row {
             .avatar-wrap { margin-right:5px; }
         }
         .commitMsg-wrap {
+            a {
+                color: @blue2;
+            }
             .commitMsg.short { font-size:18px; white-space:normal; }
             .commitMsg.desc  { margin:5px; font-family: @fixed-font-family;}
         }
