--- a/app/views/code/diff.scala.html
+++ b/app/views/code/diff.scala.html
@@ -1,22 +1,8 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author Yi EungJun
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @(project: Project, commit:playRepository.Commit,
 parentCommit:playRepository.Commit, threads:List[CommentThread], selectedBranch:String, diff:
@@ -29,6 +15,12 @@ List[playRepository.FileDiff],path:String)
 @import utils.JodaDateUtil
 @import utils.AccessControl._
 @import scala.collection.JavaConversions._
+@import utils.AutoLinkRenderer
+
+@autoLinkedMsg(msg:String) = @{
+    val autoLinkRenderer = new AutoLinkRenderer(msg, project)
+    autoLinkRenderer.render()
+}
 
 @projectLayout(Messages("code.commits") + " @" + commit.getId, project, utils.MenuType.CODE) {
 @projectMenu(project, utils.MenuType.CODE, "main-menu-only")
@@ -84,7 +76,7 @@ List[playRepository.FileDiff],path:String)
                             </span>
                         </div>
                         <div class="commitMsg-wrap">
-                            @common.commitMsg(commit.getShortMessage, commit.getMessage, "", true)
+                            @common.commitMsg(autoLinkedMsg(commit.getShortMessage), autoLinkedMsg(commit.getMessage), "", true)
                         </div>
                         <div class="commitId-wrap">
                             <strong class="commitId">@{"@"}@commit.getId</strong>
