--- a/app/views/code/history.scala.html
+++ b/app/views/code/history.scala.html
@@ -1,22 +1,8 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author Yi EungJun
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @(project: Project, history: List[playRepository.Commit], page: Integer, selectedBranch: String, path:String)
 
@@ -28,6 +14,12 @@
 @import java.net.URLEncoder
 @import org.joda.time.Duration
 @import controllers.CodeApp
+@import utils.AutoLinkRenderer
+
+@autoLinkedMsg(msg:String) = @{
+    val autoLinkRenderer = new AutoLinkRenderer(msg, project)
+    autoLinkRenderer.render()
+}
 
 @getFilesURL = @{
     if(selectedBranch){
@@ -160,7 +152,7 @@
                                         <span class="number-of-comments"><i class="yobicon-comments"></i> @numOfComment</span>
                                         }
                                     }
-                                    @common.commitMsg(commit.getShortMessage(), commit.getMessage(), showCommitURL.toString())
+                                    @common.commitMsg(commit.getShortMessage(), autoLinkedMsg(commit.getMessage()), showCommitURL.toString())
                                 </td>
                                 @if(path != null){
                                 <td class="browse">
