css: Clean up fonts
- Remove unused fonts
- Remove NanumBarunGothic font for compatibility

Also see: Yona Github issue #191

--- a/app/assets/stylesheets/less/_variables.less
+++ b/app/assets/stylesheets/less/_variables.less
@@ -9,7 +9,7 @@
 @base-webfont-path: "../images/webfont";
 
 // Typography
-@base-font-family: "Noto Sans", "New Roboto", "Helvetica Neue", "Helvetica", "Apple SD Gothic Neo", "나눔바른고딕", "NanumBarunGothic", "NanumBarunGothicOTF", "Arial", "나눔고딕", "NanumGothic", "NanumGothicOTF", "맑은 고딕", -apple-system, BlinkMacSystemFont, sans-serif;
+@base-font-family: "Noto Sans", "New Roboto", "Helvetica Neue", "Helvetica", "Apple SD Gothic Neo", "Arial", "나눔고딕", "NanumGothic", "NanumGothicOTF", "맑은 고딕", -apple-system, BlinkMacSystemFont, sans-serif;
 @fixed-font-family: Consolas, "Menlo", "Monaco", "Ubuntu Mono",  "source-code-pro", monospace;
 
 @base-font-size  : 13px;
